Fix for page sizing on Firefox

--- a/src/pages/shared/shared.css
+++ b/src/pages/shared/shared.css
@@ -72,3 +72,7 @@ body {
   body>.el-container {
     margin: 0;
   }
+
+  .el-container.is-vertical {
+    height: 100vh;
+  }
